syntax="proto3"; //消息类型命名规范：使⽤驼峰命名法，⾸字⺟⼤写。
package mystring;


//定义联系人消息
message MyNumber{
    optional string  opt_string=1;  // optional
    string           imp_string=2;  // implicit
}
